# hackathon-2023-summer

./: .gitignore  .gitmodules  README.md  README.md.bak
docs/: categories.md  (+2 more)
projects/03-dandelion/src/substrate/node/: Cargo.toml
projects/03-dandelion/src/substrate/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
projects/03-dandelion/src/substrate/runtime/: Cargo.toml
projects/03-dandelion/src/substrate/runtime/src/: lib.rs
projects/11-cybros-network/src/node/: Cargo.toml  build.rs
projects/11-cybros-network/src/node/res/: development_network_genesis_config.json  local_network_genesis_config.json
projects/11-cybros-network/src/node/src/: benchmarking.rs  chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
projects/11-cybros-network/src/pallets/fake_offchain_computing/: Cargo.toml  README.md
projects/11-cybros-network/src/pallets/fake_offchain_computing/src/: lib.rs  mock.rs
projects/11-cybros-network/src/pallets/offchain_computing/: Cargo.toml  README.md
projects/11-cybros-network/src/pallets/offchain_computing/primitives/: Cargo.toml  README.md
projects/11-cybros-network/src/pallets/offchain_computing/src/: lib.rs  mock.rs  tests.rs
projects/11-cybros-network/src/pallets/offchain_computing_workers/: Cargo.toml  README.md
projects/11-cybros-network/src/pallets/offchain_computing_workers/primitives/: Cargo.toml  README.md
projects/11-cybros-network/src/pallets/offchain_computing_workers/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
projects/11-cybros-network/src/runtime-primitives/: Cargo.toml
projects/11-cybros-network/src/runtime-primitives/src/: lib.rs
projects/11-cybros-network/src/runtimes/primal/: Cargo.toml  build.rs
projects/11-cybros-network/src/runtimes/primal/src/: lib.rs  migrations.rs  test.rs
projects/21-universaldot/src/pallets/dao/: Cargo.toml
projects/21-universaldot/src/pallets/dao/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
projects/21-universaldot/src/pallets/profile/: Cargo.toml  types.json
projects/21-universaldot/src/pallets/profile/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
projects/21-universaldot/src/pallets/task/: Cargo.toml
projects/21-universaldot/src/pallets/task/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  traits.rs  weights.rs
projects/22-Drumbeat/src/substrate/runtime/: Cargo.toml
projects/22-Drumbeat/src/substrate/runtime/src/: constants.rs  lib.rs
projects/23-Nomocracy/src/deoss-app/: Cargo.toml
projects/23-Nomocracy/src/deoss-app/deoss/: Cargo.toml
projects/23-Nomocracy/src/deoss-app/deoss/src/: deoss.rs  lib.rs
projects/23-Nomocracy/src/deoss-app/src/: constants.rs  main.rs
projects/23-Nomocracy/src/discux/: Cargo.toml  README.md
projects/23-Nomocracy/src/discux/src/: article.rs  comment.rs  index.rs  main.rs  subspace.rs  tag.rs  user.rs
projects/23-Nomocracy/src/discux/src/_bin/: mock_data_service.rs
projects/23-Nomocracy/src/gutp-service/gutp/: Cargo.toml  spin-a.toml  spin.toml
projects/23-Nomocracy/src/gutp-service/gutp/src/: comment.rs  constants.rs  lib.rs  moderator.rs  post.rs  postdiff.rs  posttag.rs  subspace.rs  tag.rs  user.rs  utils.rs
projects/36-Cyborg/src/Cyberhub/: Cargo.toml  README.md
projects/36-Cyborg/src/Cyberhub/src/: connections.rs  http_handler.rs  index.css  index.html  main.rs  messages.rs  ws_handler.rs
projects/36-Cyborg/src/Cyborg Node/node/: Cargo.toml
projects/36-Cyborg/src/Cyborg Node/node/src/: benchmarking.rs  chain_spec.rs  command.rs  main.rs  rpc.rs  service.rs
projects/36-Cyborg/src/Cyborg Node/runtime/: Cargo.toml
projects/36-Cyborg/src/Cyborg Node/runtime/src/: lib.rs
projects/36-Cyborg/src/Cyborg Smart Client/: Cargo.toml  README.md
projects/36-Cyborg/src/Cyborg Smart Client/src/: clap.rs  client.rs  config.rs  formats.rs  log.yml  macros.rs  main.rs  proc.rs
projects/36-Cyborg/src/Cyborg Smart Client/src/api_calls/: mod.rs
projects/36-Cyborg/src/Cyborg Smart Client/src/unit_tests/: basic.rs
projects/39-dauth-network/src/contracts/: Cargo.toml  README.md  lib2.rs
projects/39-dauth-network/src/instant-proof/app/: Cargo.toml  build.rs  conf.toml  log4rs.yml  schema.sql
projects/39-dauth-network/src/instant-proof/app/src/: config.rs  error.rs  main.rs
projects/39-dauth-network/src/instant-proof/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  a
projects/39-dauth-network/src/instant-proof/enclave/src/: config.rs  err.rs  lib.rs  log.rs  model.rs  oauth.rs  os_utils.rs  otp.rs  session.rs  sgx_utils.rs  web3.rs
projects/42-CBIndex/src/substrate/contract/: .gitignore  Cargo.toml  Makefile  build.rs
projects/42-CBIndex/src/substrate/contract/entry/: Cargo.toml  build.rs  entry.meta.txt
projects/42-CBIndex/src/substrate/contract/io/: Cargo.toml
projects/42-CBIndex/src/substrate/contract/src/: lib.rs
projects/42-CBIndex/src/substrate/contract/state/: Cargo.toml
projects/42-CBIndex/src/substrate/contract/storage/: Cargo.toml  build.rs  storage.meta.txt
projects/47-Trypto/src/constract/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/base_account/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/base_paymaster/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/entry_point/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/nonce_manager/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/sender_creator/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/contracts/stake_manager/: Cargo.toml  lib.rs
projects/50-Polkadot-Smart-Account/src/core/: env.rs  exec.rs  helpers.rs  mod.rs  user_operation.rs
projects/50-Polkadot-Smart-Account/src/traits/: account.rs  aggregator.rs  entry_point.rs  mod.rs  nonce_manager.rs  paymaster.rs  stake_manager.rs
projects/CryptoSpiral/src/pallet/spiral-dao/: Cargo.toml
projects/CryptoSpiral/src/spiral-contract/: Cargo.toml  README.md  s3.rs
(+3113 files in other folders)
