[package]
name = "cybros-runtime-primitives"
version = "0.0.1-dev"
description = "Cybros runtimes' common low-level primitives."
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
]
