[package]
name = "meblog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
askama = "0.12.0"
anyhow = "1.0.71"

gutp-types = {path = "../gutp/gutp-types"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

redis = { version = "0.23.0", features = ["tokio-comp"] }
reqwest = "0.11.18"
