[package]
name = "cyberhub"
version = "0.1.0"
authors = ["Cyborg Developer <info@cyborgnetwork.io>"]
edition = "2021"
repository = "https://github.com/Cyborg-Network/cyberhub"

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
http = "0.2.8"
hyper = { version = "0.14.0" , features = ["server"]}
lazy_static = "1.4.0"
log = "0.4"
log4rs = "1.2.0"
mio-extras = "2.0.6"
reqwest = "0.11.18"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.17"
time = "0.1.39"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.18.0"
tungstenite = "0.19.0"
uuid = { version = "1.1.2", features = ["v4"] }
ws = "0.9.2"
web3 = "0.18.0"