[package]
name = "cyborg-smart-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
bincode = "1.3.3"
byte-unit = "4.0.14"
chrono = "0.4.19"
clap = { version = "3.2.4", features = ["derive"] }
convert_case = "0.5.0"
futures = "0.3.21"
futures-channel = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
home = "0.5.3"
http = "0.2.8"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = "1.2.0"
pkg-version = "1.0.0"
proc-macro2 = "1.0.40"
quote = "1.0.20"
rand = "0.8.5"
reqwest = "0.11.11"
rev_lines = "0.2.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_yaml = "0.9.17"
sha2 = "0.10.2"
syn = "1.0.98"
sysinfo = "0.24.6"
system_shutdown = "3.0.0"
tokio = { version = "1.16.1", features = ["rt", "macros", "rt-multi-thread", "process"] }
tokio-tungstenite = "0.17.1"
toml = "0.5.9"
uuid = { version = "1.1.2", features = ["v4"] }
yaml-rust = "0.4.5"
execute = "0.2.12"

[lib]
name = "proc_macros"
path = "src/proc.rs"
proc-macro = true

[[bin]]
name = "bin"
path = "src/main.rs"
