[package]
name = "pallet-offchain_computing"
version = "0.0.1-dev"
description = "Cybros off-chain computing protocol pallet, powered by pallet-offchain_computing_workers"
authors.workspace = true
repository.workspace = true
license.workspace = true
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { version = "0.4.18", default-features = false }

scale-codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = ["derive"] }
scale-info = { version = "2.8.0", default-features = false, features = ["derive"] }

sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

pallet-offchain_computing_workers = { path = "../offchain_computing_workers", default-features = false }
primitives = { package = "pallet-offchain_computing-primitives", path = "./primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master" }

pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "master" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
default = ["std"]
std = [
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-offchain_computing_workers/std",
	"primitives/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-offchain_computing_workers/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-offchain_computing_workers/try-runtime",
]
